<resources>
    <string name="app_name">School Guider</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_school__page">School_Page</string>
    <string name="title_activity_school__schedule">School_Schedule</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_guider__settings">Guider_Settings</string>
    <string name="title_activity_mindfulness">MindfulnessActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_morning_activities_page">MorningActivitiesPage</string>
    <string name="title_activity_afternoon">FullscreenActivity</string>
    <string name="title_activity_afternoon2">AfternoonActivity2</string>
    <string name="title_activity_grades">GradesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_afternoon_activities_page">AfternoonActivitiesPage</string>
    <string name="title_activity_evening_activities_page">EveningActivitiesPage</string>
    <string name="title_activity_user_grades">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_course_grades">Course_Grades</string>
    <string name="title_activity_achievements_starter">Achievements_Starter</string>
    <string name="title_activity_goals_starter">Goals_Starter</string>
    <string name="title_activity_grades_input">GradesInput</string>
    <string name="quote1">"There are two types of people who will tell you that you cannot make a difference in this world: those who are afraid to try and those who are afraid you will succeed."</string>
    <string name="author1">-Ray Goforth</string>
    <string name="quote2">"There is a powerful driving force inside every human being that, once unleashed, can make any vision, dream, or desire a reality."</string>
    <string name="author2">-Anthony Robbins</string>
    <string name="appTitle">School Guider</string>
    <string name="profileImage">Image of Profile</string>
    <string name="backpack">Image of Backpack</string>
    <string name="clipboard">Image of Clipboard</string>
    <string name="schedule">Schedule</string>
    <string name="day1">Day 1</string>
    <string name="day2">Day 2</string>
    <string name="day3">Day 3</string>
    <string name="day4">Day 4</string>
    <string name="morning">Morning</string>
    <string name="filler">Filler</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="morningButton">View Morning Activities</string>
    <string name="morningRelax">Make your morning relaxing…</string>
    <string name="productivity">Enhance Your Productivity</string>
    <string name="product">"Let's have a productive afternoon!"</string>
    <string name="eveningRelax">Relaxing Evening Activities</string>
    <string name="close">"Let's close out the day…"</string>
    <string name="eveAct">Evening Activities</string>
    <string name="violin">Violin</string>
    <string name="basketball">Basketball</string>
    <string name="coding">Coding</string>
    <string name="dinner">Dinner</string>
    <string name="afternoonA">Afternoon Activities</string>
    <string name="homework">Homework</string>
    <string name="lunch">Lunch</string>
    <string name="school">School</string>
    <string name="morningAct">Morning Activities</string>
    <string name="meditation">Meditation</string>
    <string name="workout">Workout</string>
    <string name="breakfast">Breakfast</string>
    <string name="music">Music</string>
    <string name="reading">Reading</string>
    <string name="chill">Just Chill…</string>
    <string name="goals">Goals Overview</string>
    <string name="goals2">Make Your Goals!</string>
    <string name="achievements">See Your Achievements!</string>
    <string name="courseGrades">Course Grades</string>
    <string name="curriculum">Curricular Overview</string>
    <string name="course1">Course 1</string>
    <string name="course2">Course 2</string>
    <string name="course3">Course 3</string>
    <string name="course4">Course 4</string>
    <string name="course5">Course 5</string>
    <string name="course6">Course 6</string>
    <string name="course7">Course 7</string>
    <string name="setAlarmMeditation">Set a Meditation Reminder</string>
    <string name="cancelAlarmMeditation">Cancel Meditation Reminder</string>
    <string name="home">Home Button</string>
    <string name="gradesOverviewAchievements">Achievements</string>
</resources>