<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notification">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/meditation_wallpaper"
        />

    <Button
        android:id="@+id/setReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/morning"
        android:text="@string/setAlarmMeditation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textSize="12sp"
        />

    <Button
        android:id="@+id/cancelReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/morning"
        android:text="@string/cancelAlarmMeditation"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/setReminder"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_action_home"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/home"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonToAlarm"
        android:layout_above="@+id/fab"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_action_alarm"
        android:contentDescription="@string/gradesOverviewAchievements"
        />

</RelativeLayout>