<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Goals_Fragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grades"
        android:theme="@style/Theme.SchoolGuider.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:padding="16dp"
            android:text="@string/goals"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_action_home"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/filler"/>

    <TextView
        android:id="@+id/quote1"
        android:layout_width="340dp"
        android:layout_height="190dp"
        android:layout_below="@id/appBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:fontFamily="cursive"
        android:padding="20dp"
        android:text="@string/quote1"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/quoteBold1"
        android:layout_width="340dp"
        android:layout_height="190dp"
        android:layout_below="@id/appBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:fontFamily="cursive"
        android:padding="20dp"
        android:text="@string/quote1"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/author1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quote1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:fontFamily="cursive"
        android:padding="20dp"
        android:text="@string/author1"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/quote2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:fontFamily="cursive"
        android:padding="20dp"
        android:text='"There is a powerful driving force inside every human being that, once unleashed, can make any vision, dream, or desire a reality."'
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/quoteBold2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:fontFamily="cursive"
        android:padding="20dp"
        android:text="@string/quote2"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/quoteBold4"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:fontFamily="cursive"
        android:padding="20dp"
        android:text="@string/quote2"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic|bold" />


    <TextView
        android:id="@+id/author2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quoteBold4"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:padding="20dp"
        android:text="@string/author2"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic|bold"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/goals"
        android:text="@string/goals2" />

</RelativeLayout>