<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EveningActivitiesPage">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.SchoolGuider.AppBarOverlay"
        android:backgroundTint="@color/evening">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="16dp"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:textColor="@color/light_blue_A400"
            android:text="@string/eveAct"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:contentDescription="@string/filler"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_action_home"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/filler"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonToAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_action_alarm"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/fab"
        android:contentDescription="@string/gradesOverviewAchievements"
        />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout"
        android:padding="20dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/violin"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="0"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/eveningButton"/>

        <Button
            android:id="@+id/codingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/coding"
            android:padding="15dp"
            app:layout_row="1"
            app:layout_column="0"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/eveningButton"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/dinner"
            android:padding="15dp"
            app:layout_row="2"
            app:layout_column="0"
            android:backgroundTint="@color/eveningButton"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/basketball"
            android:padding="15dp"
            app:layout_row="3"
            app:layout_column="0"
            android:backgroundTint="@color/eveningButton"
            />

        <ImageView
            android:layout_width="125dp"
            android:layout_height="120dp"
            app:layout_row="0"
            app:layout_column="1"
            android:layout_marginStart="50dp"
            android:src="@drawable/violin"
            android:contentDescription="@string/violin"
            />

        <ImageView
            android:layout_width="125dp"
            android:layout_height="91dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/code"
            app:layout_column="1"
            app:layout_row="1"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/coding"/>

        <ImageView
            android:layout_width="125dp"
            android:layout_height="120dp"
            app:layout_row="2"
            app:layout_column="1"
            android:layout_marginStart="50dp"
            android:src="@drawable/dinner"
            android:contentDescription="@string/dinner"
            />

        <ImageView
            android:layout_width="125dp"
            android:layout_height="120dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/basketball"
            app:layout_column="1"
            app:layout_row="3"
            android:contentDescription="@string/basketball"/>

    </androidx.gridlayout.widget.GridLayout>

</RelativeLayout>